--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,14 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "run": {
+          "serviceId": "useless-conversions"
+        }
+      }
     ]
   }
 }
