--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -38,7 +38,7 @@ jobs:
         run: gcloud auth configure-docker
 
       - name: Build and Push Container
-        run: gcloud builds submit --tag gcr.io/${{ env.PROJECT_ID }}/${{ SERVICE }}
+        run: gcloud builds submit --tag gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}
       
       - name: Deploy to Cloud Run
         run: |-
