--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -7,16 +7,17 @@ on:
       - main
 
 name: Deploy Server and Static Assets to GCP
-env:
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  SERVICE: useless-conversions
-  REGION: us-central1
+
 
 jobs:
   deploy_server:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     name: "Deploy Backend Server"
     runs-on: ubuntu-latest
+    env:
+      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+      SERVICE: "useless-conversions"
+      REGION: us-central1
 
     permissions:
       contents: 'read'
