--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -43,9 +43,9 @@ jobs:
       
       - name: Deploy to Cloud Run
         run: |-
-          gcloud run deploy ${{ env.SERVICE }} \
-            --region ${{ env.REGION }} \
-            --image gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} \
+          gcloud run deploy $SERVICE \
+            --region $REGION \
+            --image gcr.io/$PROJECT_ID/$SERVICE:${{ github.sha }} \
             --platform "managed" \
             --quiet
 
